fix vertical align buttons

--- a/src/pages/InterestedList/styles.css
+++ b/src/pages/InterestedList/styles.css
@@ -46,9 +46,6 @@
   width: 400px;
 }
 #interested-list-page #interested-list tr td:last-of-type {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   width: 160px;
 }
 
